[package]
name = "physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
rand = "*"
bevy_pancam = "0.3.0"
rayon = "*"

profiling = { version = "1.0.1", default-features = false, optional = true }

[features]
tracy = ["profiling", "profiling/profile-with-tracy"]