[package]
name = "physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
rand = "*"
bevy_pancam = "0.3"
rayon = "*"
itertools = "*"
bevy_egui = "0.14"

profiling = { version = "1.0.1", default-features = false, optional = true }

massi = { git = "https://github.com/IsseW/math", optional = true }

[features]
default = ["math"]
tracy = ["profiling", "profiling/profile-with-tracy"]
math = ["massi/cranelift"]
panic-nan = []